add jenkinss build
